Fix title alignment

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ header {
     height: 16vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 main {
